# quant-value-vn

./: .env.example  .gitignore  CAFEF_DATA_ANALYSIS.md  FIXES_SUMMARY.md  README.md  analyze_nan.py  checklist.md  dump_cafef.py  metrics.md  pyproject.toml  requirements.txt  test_metrics.py
quant_value_vn/: checklist.md  config.py  requirements.txt
quant_value_vn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
quant_value_vn/app/: main.py  routes.py  services.py
quant_value_vn/dashboard/: streamlit_app.py
quant_value_vn/database/: queries.py  schema.sql  supabase_client.py
quant_value_vn/pipeline/: cache.py  clean.py  distress.py  features.py  fraud.py  ingest.py  momentum.py  quality.py  ranking.py  run_pipeline.py  scores.py  value.py  vietnam_flags.py
quant_value_vn/tests/: test_data_coverage.py
quant_value_vn/web/: package-lock.json  package.json  tailwind.config.ts
quant_value_vn/web/src/app/: DashboardClient.tsx  globals.css  layout.tsx  page.tsx
quant_value_vn/web/src/app/screener/: ScreenerClient.tsx  page.tsx
quant_value_vn/web/src/app/watchlist/: WatchlistClient.tsx  page.tsx
quant_value_vn/web/src/components/: Sidebar.tsx
quant_value_vn/web/src/lib/: api.ts
